tests/ui/compile-fail/pinned_drop/useless_pinned_drop.stderr
error[E0119]: conflicting implementations of trait `UselessPinnedDropImpl_you_need_to_specify_PinnedDrop` for type `Foo`
 --> tests/ui/compile-fail/pinned_drop/useless_pinned_drop.rs:4:1
  |
4 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
